# fotd-server

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Directory.Build.props  FOMServer.sln  LICENSE  ManagedOnly.slnf  README.md  justfile
fom-network/: .gitignore  CMakeLists.txt  FOMNetwork.vcxproj
fom-network/include/fom-network/: ClientAPI.h  ClientApi.h  Common.h  FOMDataSerializer.h  FOMNetwork.h  FOMNetworkEnums.h  FOMNetworkExport.h  FOMNetworkTypes.h  FOMPacket.h  FOMPacketSerializer.h  Interop.h  InteropTypes.h  NetworkAPI.h  PacketAPI.h  PacketIdentifier.h  PacketIdentifiers.h  PacketSerializers.h  ServerAPI.h  ServerApi.h  WorldID.h
fom-network/include/fom-network/constants/: PlayerConstants.h
fom-network/include/fom-network/enums/: AccountType.h  ApartmentType.h  AttributeType.h  Avatar.h  ChatChannel.h  ItemQuality.h  ItemSlot.h  PacketIdentifier.h  Player.h  SerializationStatus.h  VortexGateType.h  WorldID.h  WorldId.h  WorldObjectUpdate.h
fom-network/include/fom-network/models/: Avatar.h  NetworkAddress.h
fom-network/include/fom-network/packets/: Chat.h  CheckMail.h  CheckName.h  CheckNameReturn.h  CreateCharacter.h  FOMPacket.h  Gamemaster.h  ItemsAdded.h  ItemsChanged.h  ItemsRemoved.h  Login.h  LoginRequest.h  LoginRequestReturn.h  LoginReturn.h  LoginTokenCheck.h  Mail.h  MoveItems.h  PacketIdentifier.h  PacketSerializers.h  PacketTypes.h  ReadPacketError.h  RegisterClientReturn.h  RegisterWorld.h  Reload.h  Update.h  VortexGate.h  WeaponFire.h  WorldLogout.h  WorldObjects.h  WorldService.h  WorldUpdate.h
fom-network/include/fom-network/packets/data/: CheckNameReturn.h  CreateCharacter.h  Login.h  LoginRequest.h  LoginRequestReturn.h  LoginReturn.h  LoginTokenCheck.h  PlayerEnteringWorld.h  PlayerEnteringWorldReturn.h  ReadPacketError.h  RegisterClient.h  RegisterClientReturn.h  RegisterWorld.h  WorldLogin.h  WorldLoginReturn.h  WorldOverview.h  WorldOverviewReturn.h
fom-network/include/fom-network/packets/data/raknet/: AlreadyConnected.h  ConnectionAttemptFailed.h  ConnectionBanned.h  ConnectionLost.h  ConnectionRequestAccepted.h  DisconnectionNotification.h  InvalidPassword.h  ModifiedPacket.h  (+3 more)
fom-network/include/fom-network/packets/models/: ApartmentModel.h  AvatarModel.h  ItemModel.h  ItemSlotModel.h  PlayerAttributesModel.h  WorldOverviewModel.h
fom-network/include/fom-network/packets/raknet/: AlreadyConnected.h  ConnectionAttemptFailed.h  ConnectionBanned.h  ConnectionLost.h  ConnectionRequestAccepted.h  DisconnectionNotification.h  InvalidPassword.h  ModifiedPacket.h  NewIncomingConnection.h  NoFreeIncomingConnections.h  RSAPublicKeyMismatch.h
fom-network/include/fom-network/types/: Apartment.h  Avatar.h  NetworkAddress.h  Position.h  PositionRotation.h  WorldObject.h  WorldUpdate.h
fom-network/src/: BaseSerializer.h  ClientAPI.cpp  ClientApi.cpp  FOMDataSerializer.cpp  FOMDataSerializer.h  FOMPacketSerializer.cpp  FOMPacketSerializer.h  NetworkAPI.cpp  PacketAPI.cpp  PacketServer.cpp  PacketServer.h  RakNetIncludes.h  ServerAPI.cpp  ServerApi.cpp
fom-network/src/model-serializers/: AvatarSerializer.h  ModelSerializer.h  NetworkAddressSerializer.h
fom-network/src/packet-serializers/: CheckNameReturnSerializer.cpp  CheckNameSerializer.cpp  CreateCharacterSerializer.cpp  ExamplePacketSerializer.cpp  LoginRequestReturnSerializer.cpp  LoginRequestSerializer.cpp  LoginReturnSerializer.cpp  LoginSerializer.cpp  NetworkAddressSerializer.h  PacketSerializers.h  RegisterWorldSerializer.cpp
fom-network/src/packet-serializers/data/: CheckNameReturnSerializer.cpp  CheckNameSerializer.cpp  CreateCharacterSerializer.cpp  LoginRequestReturnSerializer.cpp  LoginRequestSerializer.cpp  LoginSerializer.cpp  LoginTokenCheckSerializer.cpp  PlayerEnteringWorldReturnSerializer.cpp  PlayerEnteringWorldSerializer.cpp  RegisterClientReturnSerializer.cpp  RegisterClientSerializer.cpp  RegisterWorldSerializer.cpp  WorldLoginReturnSerializer.cpp  WorldLoginSerializer.cpp  WorldOverviewSerializer.cpp
fom-network/src/packet-serializers/models/: AvatarModelSerializer.h  ItemModelSerializer.cpp  ItemModelSerializer.h  ItemSlotModelSerializer.h  PlayerAttributesModelSerializer.h  PositionModelSerializer.h  PositionRotationModelSerializer.h  WorldOverviewModelSerializer.h
fom-network/src/packets/: ChatSerializer.cpp  CheckMailSerializer.cpp  CheckNameReturnSerializer.cpp  CheckNameSerializer.cpp  CreateCharacterSerializer.cpp  GamemasterSerializer.cpp  ItemsAddedSerializer.cpp  ItemsChangedSerializer.cpp  ItemsRemovedSerializer.cpp  LoginRequestReturnSerializer.cpp  LoginRequestSerializer.cpp  LoginReturnSerializer.cpp  LoginSerializer.cpp  LoginTokenCheckSerializer.cpp  MailSerializer.cpp  MoveItemsSerializer.cpp  PacketSerializers.h  PlayerLeavingWorldSerializer.cpp  PlayerMigrateWorldSerializer.cpp  PlayerWorldReadySerializer.cpp  RegisterClientReturnSerializer.cpp  RegisterClientSerializer.cpp  RegisterWorldSerializer.cpp  ReloadSerializer.cpp  UpdateSerializer.cpp  VortexGateSerializer.cpp  WeaponFireSerializer.cpp  WorldLoginReturnSerializer.cpp  WorldLoginSerializer.cpp  WorldLogoutSerializer.cpp  WorldObjectsSerializer.cpp  WorldServiceSerializer.cpp  WorldUpdateSerializer.cpp
fom-network/src/serializers/: FOMPacketErrorSerializer.cpp  LoginRequestReturnSerializer.cpp  LoginRequestSerializer.cpp  LoginSerializer.cpp
fom-network/src/types/: ApartmentSerializer.h  AvatarSerializer.h  FactionEmblemLayerSerializer.h  FactionEmblemSerializer.h  FactionPerksSerializer.h  ItemBaseSerializer.h  ItemListSerializer.cpp  ItemListSerializer.h  ItemSerializer.h  NetworkAddressSerializer.h  PlayerAttributesSerializer.h  PlayerProfileSerializer.h  PlayerSkillsSerializer.h  PositionRotationSerializer.h  PositionSerializer.h  TypeSerializer.h  WorldUpdateSerializer.cpp  WorldUpdateSerializer.h
fom-network/tests/: CMakeLists.txt  FOMDataSerializer_test.cpp  FOMPacketSerializer_test.cpp
fom-network/tests/packet-serializers/: ExamplePacketSerializer_test.cpp
fom-network/tests/serializers/: FOMPacketErrorSerializer_test.cpp
(+2335 files in other folders)
